[tool.poetry]
name = "actorcutmix-extended"
version = "0.1.0"
description = "Exploratory study on enhancing ActorCutMix for video augmentation"
authors = ["Randy Cahya Wihandika <rendicahya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openmim = "^0.3.9"
ultralytics = "^8.3.174"
rich-click = "^1.8.9"
dynaconf = "^3.2.11"
rich = "^14.1.0"
tomli = "^2.2.1"
platformdirs = "^4.3.8"
moviepy = "^2.2.1"
numpy = "1.26.4"
torch = {version = "1.13.1+cu116", source = "pytorch-cu116"}
torchvision = {version = "0.14.1+cu116", source = "pytorch-cu116"}
opencv-python = "4.11.0.86"
opencv-contrib-python = "4.11.0.86"

[[tool.poetry.source]]
name = "pytorch-cu116"
url = "https://download.pytorch.org/whl/cu116"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
