[tool.poetry]
name = "actorcutmix-extended"
version = "0.1.0"
description = "Exploratory study on enhancing ActorCutMix for video augmentation"
authors = ["Randy Cahya Wihandika <rendicahya@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
openmim = "^0.3.9"
ultralytics = "^8.3.174"
rich-click = "^1.8.9"
dynaconf = "^3.2.11"
tomli = "^2.2.1"
platformdirs = "^4.3.8"
moviepy = "^2.2.1"
torch = {version = "1.13.1+cu116", source = "pytorch-cu116"}
torchvision = {version = "0.14.1+cu116", source = "pytorch-cu116"}
numpy = "<2"
tqdm = "^4.67.1"

[[tool.poetry.source]]
name = "pytorch-cu116"
url = "https://download.pytorch.org/whl/cu116"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
detection = "yolo.batch:main"